--- a/TriFunCal1_0.ui
+++ b/TriFunCal1_0.ui
@@ -6,65 +6,35 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>489</width>
-    <height>372</height>
+    <width>581</width>
+    <height>352</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QTextBrowser" name="input">
+   <widget class="QTextBrowser" name="output">
     <property name="geometry">
      <rect>
-      <x>59</x>
-      <y>100</y>
-      <width>421</width>
+      <x>80</x>
+      <y>90</y>
+      <width>441</width>
       <height>50</height>
      </rect>
     </property>
     <property name="maximumSize">
      <size>
-      <width>16777215</width>
+      <width>1000</width>
       <height>100</height>
      </size>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="output">
-    <property name="geometry">
-     <rect>
-      <x>60</x>
-      <y>60</y>
-      <width>421</width>
-      <height>20</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>60</y>
-      <width>54</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>  输入:</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>110</y>
+      <x>20</x>
+      <y>100</y>
       <width>54</width>
       <height>20</height>
      </rect>
@@ -83,9 +53,9 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>59</x>
-      <y>170</y>
-      <width>421</width>
+      <x>40</x>
+      <y>150</y>
+      <width>511</width>
       <height>128</height>
      </rect>
     </property>
@@ -94,7 +64,7 @@
       <widget class="QPushButton" name="pushButton_sin">
        <property name="minimumSize">
         <size>
-         <width>100</width>
+         <width>135</width>
          <height>60</height>
         </size>
        </property>
@@ -104,8 +74,16 @@
          <height>180</height>
         </size>
        </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
        <property name="text">
-        <string>sin</string>
+        <string>sin
+可输入角度及弧度</string>
        </property>
       </widget>
      </item>
@@ -113,7 +91,7 @@
       <widget class="QPushButton" name="pushButton_cos">
        <property name="minimumSize">
         <size>
-         <width>100</width>
+         <width>135</width>
          <height>60</height>
         </size>
        </property>
@@ -123,8 +101,16 @@
          <height>180</height>
         </size>
        </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
        <property name="text">
-        <string>cos</string>
+        <string>cos
+可输入角度及弧度</string>
        </property>
       </widget>
      </item>
@@ -132,7 +118,7 @@
       <widget class="QPushButton" name="pushButton_ce">
        <property name="minimumSize">
         <size>
-         <width>100</width>
+         <width>135</width>
          <height>60</height>
         </size>
        </property>
@@ -141,6 +127,13 @@
          <width>60</width>
          <height>180</height>
         </size>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
        </property>
        <property name="text">
         <string>ce</string>
@@ -151,7 +144,7 @@
       <widget class="QPushButton" name="pushButton_arcsin">
        <property name="minimumSize">
         <size>
-         <width>100</width>
+         <width>135</width>
          <height>60</height>
         </size>
        </property>
@@ -161,8 +154,17 @@
          <height>180</height>
         </size>
        </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
        <property name="text">
-        <string>arcsin</string>
+        <string>arcsin
+在角度输入框输入
+定义域(-π/2,π/2)</string>
        </property>
       </widget>
      </item>
@@ -170,7 +172,7 @@
       <widget class="QPushButton" name="pushButton_arctan">
        <property name="minimumSize">
         <size>
-         <width>100</width>
+         <width>135</width>
          <height>60</height>
         </size>
        </property>
@@ -180,8 +182,17 @@
          <height>180</height>
         </size>
        </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
        <property name="text">
-        <string>arctan</string>
+        <string>arctan
+在角度输入框输入
+定义域(-∞,+∞)</string>
        </property>
       </widget>
      </item>
@@ -189,7 +200,7 @@
       <widget class="QPushButton" name="pushButton_clear">
        <property name="minimumSize">
         <size>
-         <width>100</width>
+         <width>135</width>
          <height>60</height>
         </size>
        </property>
@@ -199,8 +210,88 @@
          <height>180</height>
         </size>
        </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
        <property name="text">
         <string>clear</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="layoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>60</y>
+      <width>531</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <layout class="QGridLayout" name="gridLayout_2">
+     <item row="0" column="0">
+      <widget class="QLabel" name="label">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>  输入(角度):</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLineEdit" name="input_Angle"/>
+     </item>
+     <item row="0" column="2">
+      <widget class="QLabel" name="label_3">
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>°</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="3">
+      <widget class="QLabel" name="label_5">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>  输入(弧度):</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="4">
+      <widget class="QLineEdit" name="input_Radian"/>
+     </item>
+     <item row="0" column="5">
+      <widget class="QLabel" name="label_4">
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>rad</string>
        </property>
       </widget>
      </item>
@@ -212,7 +303,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>489</width>
+     <width>581</width>
      <height>23</height>
     </rect>
    </property>
